# itk_vtk_learning

./: Compile.md  README.md
allTutorials/: README.md
allTutorials/01_Setup/: 01_Setup.pptx
allTutorials/02_CMake/: 02_CMake.pptx
allTutorials/02_CMake/code/: CMakeLists.txt
allTutorials/02_CMake/code/src/: main.cxx
allTutorials/03_OOP/code/: CMakeLists.txt
allTutorials/03_OOP/code/src/: main.cxx
allTutorials/03_OOP/code/src/classes/: add.h  base.h  difference.h
allTutorials/04_STL/: 04_STL.pptx
allTutorials/04_STL/code/: CMakeLists.txt
allTutorials/04_STL/code/src/: stl.cxx  template.cxx
allTutorials/05_CPP11/: 05_CPP11.pptx
allTutorials/05_CPP11/code/: CMakeLists.txt
allTutorials/05_CPP11/code/src/: lambda.cxx  sharedptr.cxx  uniqueptr.cxx
allTutorials/06_ITK-1/: 06_ITK-1.pptx
allTutorials/06_ITK-1/code/cpp/: CMakeLists.txt
allTutorials/06_ITK-1/code/cpp/src/: TAGS  main.cxx
allTutorials/06_ITK-1/code/python/: main.py
allTutorials/07_ITK-2_Segmentation/: 07_ITK-2_Segmentation.pptx
allTutorials/07_ITK-2_Segmentation/code/: CMakeLists.txt
allTutorials/07_ITK-2_Segmentation/code/src/: main.cxx
allTutorials/08_ITK-3_Multiplication/: 08_ITK-3_Multiplication.pptx
allTutorials/08_ITK-3_Multiplication/code/src/: main.cxx
allTutorials/09_ITK-4_Registration/: 09_ITK-4_Registration.pptx
allTutorials/09_ITK-4_Registration/code/src/: main.cxx
allTutorials/10_ITK-5_ML1/: 10_ITK-ML1.pptx
allTutorials/10_ITK-5_ML1/code/: CMakeLists.txt
allTutorials/10_ITK-5_ML1/code/src/: main.cxx
allTutorials/11_ITK-6_ML2/: 11_ITK-ML2.pptx
allTutorials/11_ITK-6_ML2/code/: CMakeLists.txt
allTutorials/11_ITK-6_ML2/code/data/machine_learning/: list.csv
allTutorials/11_ITK-6_ML2/code/src/: main.cxx
allTutorials/12_ErrorHandling/: 12_ErrorHandling.pptx
allTutorials/12_ErrorHandling/code/: CMakeLists.txt
allTutorials/12_ErrorHandling/code/src/: assert.cxx  exception.cxx
allTutorials/QuickView/: CMakeLists.txt
allTutorials/QuickView/src/: QuickViewDemo.cxx
